	only if no windows display the `*twittering*' buffer.

2010-01-29  Daiji Kanematsu  <daijik@gmail.com>

	* twittering-mode.el (toplevel): add `easy-menu-define' in order
	to add the menu `Twitter'.

2010-01-29  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-fill-string): Add an extra
	argument to `min' for avoiding error "Wrong number of arguments:
	min, 0".

2010-01-28  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-render-timeline): simplified by
	using `insert-before-markers' instead of `insert'. This removes
	additional movement of points for scroll-mode.

2010-01-26  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-status-to-status-datum): Add
	`original-user-name' and `original-user-screen-name' to return
	an alist; fix an incomplete merge on 2010-01-22.
	(twittering-json-to-status-datum): Likewise.

	* twittering-mode.el (twittering-json-to-status-datum): Use
	`retweeted-status-data' as variable instead of `retweeted-status';
	same as `twittering-status-to-status-datum'.

2010-01-26  Satoshi Yatagawa  <yata_github@y.hauN.org>
	
	* twittering-mode.el (toplevel): Require 'unicode explicitly on
	Emacs21. See a comment of `twittering-ucs-to-char' for more
	details.
	(twittering-ucs-to-char): Check (featurep 'unicode) instead of
	(featurep 'mucs).
	(twittering-ucs-to-char): Update comment.

	* twittering-mode.el (toplevel): On Emacs21, always call
	`set-terminal-coding-system'.

2010-01-25  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-format-status): Call
	`twittering-make-display-spec-for-icon' only when `window-system'
	is non-nil to avoid error "Non-X frame used" under Emacs which is
	using a text-only terminal.

2010-01-25  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-extract-timeline-spec): add new
	timeline spec string for hashtag.

2010-01-23  Satoshi Yatagawa  <yata_github@y.hauN.org>
